# proxy-lm-studio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bonnes_pratiques_python.md  compose.yaml  pyproject.toml  server.py
certs/: ca.crt  ca.key  ca.srl  server.crt  server.csr  server.ext  server.key
responses/: staff-picks.json
responses/artifacts/: _default.json
responses/artifacts/google/: gemma-4-31b.json  gemma-4-31b.readme.md
responses/hf/lmstudio-community/gemma-4-31B-it-GGUF/: main.json
src/proxy_lm_studio/: __init__.py  __main__.py  config.py  exceptions.py  handlers.py  logging_setup.py  main.py  routes.py
tests/: conftest.py
tests/integration/: test_server.py
tests/unit/: test_exceptions.py  test_main.py  test_routes.py
