[build-system]
requires = ["uv_build>=0.1,<0.12"]
build-backend = "uv_build"

[project]
name = "proxy-lm-studio"
version = "0.1.0"
description = "HTTPS mock server simulating LM Studio and Hugging Face API responses."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Brazok" }]
dependencies = [
    "pydantic-settings>=2.7",
    "structlog>=24.1",
]

[project.scripts]
proxy-lm-studio = "proxy_lm_studio.__main__:main"

[dependency-groups]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]
lint = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[tool.uv]
default-groups = ["dev"]
required-version = ">=0.5.0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
extend-exclude = ["migrations", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "F", "E", "W",   # pyflakes + pycodestyle
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "C4",            # comprehensions
    "SIM",           # simplifications
    "TCH",           # TYPE_CHECKING imports
    "PTH",           # pathlib over os.path
    "RET", "ARG",
    "PL",            # Pylint
    "RUF", "S",      # ruff + bandit
    "D",             # pydocstyle
    "ANN",           # annotations
]
ignore = ["E501", "ISC001", "D203", "D212", "ANN401", "COM812"]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ANN", "ARG", "PLR2004"]
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=proxy_lm_studio",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
markers = [
    "integration: requires running server",
    "slow: slow tests",
]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["src/proxy_lm_studio/__main__.py"]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
